src/objects/Qux__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <defaultValue>0</defaultValue>
        <label>B</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar__c</fullName>
        <label>Bar</label>
        <referenceTo>Bar__c</referenceTo>
        <relationshipLabel>Quxes</relationshipLabel>
        <relationshipName>Quxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>0</defaultValue>
        <label>C</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Qux</label>
    <nameField>
        <displayFormat>QUX-{0}</displayFormat>
        <label>Qux Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quxs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>